<resources>
    <string name="app_name">КГК Мобильные Сотрудники</string>

    <!-- LOGIN -->
    <string name="loginActivity_appName">Мобильные Сотрудники</string>
    <string name="loginActivity_loginTextHint">Пользователь</string>
    <string name="loginActivity_passwordTextHint">Пароль</string>
    <string name="loginActivity_rememberMeText">Запомнить пользователя</string>
    <string name="loginActivity_loginButtonText">Вход</string>
    <string name="loginActivity_passwordButtonText">Демо</string>
    <string name="wrongCredentialsAlert_messageText">Указаны неверные данные</string>
    <string name="userNotFoundAlert_messageText">Пользователь не найден</string>
    <string name="deviceNotAllowedAlert_messageText">Данное устройство не числится за указанным аккаунтом</string>
    <string name="internetErrorAlert_messageText">Ошибка соединения с сервером</string>
    <string name="noInternetConnectionAlert_messageText">Отсутствует интернет-соединение</string>
    <string name="permissionsNeededAlert_messageText">Не удалось получить необходимые разрешения</string>

    <!-- MAIN SCREEN -->
    <string name="noValueEnteredAlert_messageText">Вы не указали сумму</string>
    <string name="noOperationSelectedAlert_messageText">Невозможно сохранить - Вы не выбрали ни одного действия</string>
    <string name="attendanceSuccessfulAlert_messageText">Посещение сохранено</string>
    <string name="fetchingLocationAlert_messageText">Поиск местоположения…</string>
    <string name="salesOutletNotInRadiusAlert_messageText">Вы вышли из радиуса ТТ</string>
    <string name="loadingSalesOutletsAlert_messageText">Загрузка списка точек…</string>
    <string name="loadingUserOperationsAlert_messageText">Загрузка списка действий…</string>
    <string name="loadingAuthorizationAlert_messageText">Авторизация…</string>
    <string name="authorizationDeniedAlert_messageText">Данное устройство (ID - %s) не зарегистрировано в системе Мониторинга КГК. Для подключения обратитесь в компанию КГК - <a>https://www.kgk-global.com</a></string>
    <string name="authorizationDenied_messageText">Авторизация не пройдена. Приложение работает в ограниченном режиме</string>

    <!-- USER BOARD -->
    <string name="userBoardFragment_userOperationsConfirmButtonText">OK</string>
    <string name="addedValueDialog_messageText">Укажите сумму в рублях</string>
    <string name="addedValueDialog_confirmButtonText">OK</string>
    <string name="addedValueDialog_cancelButtonText">Отмена</string>

    <!-- TECHNICAL INFORMATION -->
    <string name="technicalInformationFragment_technicalInformationText">Техническая информация</string>
    <string name="technicalInformationFragment_lastLocationDateText">Посл.данные положения: %s</string>
    <string name="technicalInformationFragment_loadingDataText">Загрузка…</string>
    <string name="technicalInformationFragment_lastCoordinatesText">Посл.координаты: %s</string>
    <string name="technicalInformationFragment_speedText">Скорость: %s</string>
    <string name="technicalInformationFragment_lastSendingDateText">Посл.отправка: %s</string>
    <string name="technicalInformationFragment_salesOutletEntranceRadiusText">Радиус входа в ТТ - %s м</string>
    <string name="technicalInformationFragment_deviceIdText">ID устройства: %s</string>
    <string name="technicalInformationFragment_appVersionText">Версия приложения: %s</string>
    <string name="technicalInformationFragment_modeText">Режим работы приложения</string>
    <string name="technicalInformationFragment_gpsModeText">GPS Трекер</string>
    <string name="technicalInformationFragment_telephoneModeText">Телефонный звонок</string>

    <!-- LAST ACTIONS -->
    <string name="lastActionsFragment_lastActionsText">Последние действия</string>
    <string name="lastActionsFragment_salesOutletTitleText">Визит в точку %s</string>
    <string name="lastActionsFragment_salesOutletCodeText">(%s)</string>
    <string name="lastActionsFragment_attendanceDateText" formatted="false">с %s до %s</string>

    <!-- HELP -->
    <string name="helpFragment_toDoForAttendance">Для записи данных о посещении ТТ необходимо:</string>
    <string name="helpFragment_attendanceStep1">Войти в радиус интересующей ТТ. На карте радиус входа отмечен окружностью.</string>
    <string name="helpFragment_attendanceStep2">Выбрать необходимую ТТ из списка доступных точек в правом верхнем углу. Сразу после выбора активная ТТ будет выделена оранжевым цветом, и зафиксируется время начала посещения. Повторное нажатие на название ТТ отменяет вход. </string>
    <string name="helpFragment_attendanceStep3">По завершении посещения отметить проведенные операции в списке и нажать ОК - при этом вы увидите подтверждающее сообщение. После этого данные о посещении сохраняются на устройстве. Они будут отправлены на сервер, как только появится интернет-соединениние.</string>

</resources>
