<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingStart="24dp"
    android:paddingBottom="8dp"
    android:paddingRight="24dp"
    android:paddingEnd="24dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:text="@string/addedValueDialog_messageText" />

    <EditText
        android:id="@+id/addedValueDialog_valueEditText"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/addedValueDialog_confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/addedValueDialog_confirmButtonText"
            android:background="@drawable/gray_accent_border_all_sides_white_background"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/addedValueDialog_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/addedValueDialog_cancelButtonText"
            android:background="@drawable/gray_accent_border_all_sides_white_background"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
