<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="17sp"
        android:textColor="@android:color/black"
        android:text="@string/helpFragment_toDoForAttendance" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:src="@drawable/black_circle_border_transparent_background"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="1"
            android:background="@drawable/black_circle_border_transparent_background"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:text="@string/helpFragment_attendanceStep1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:src="@drawable/black_circle_border_transparent_background"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="2"
            android:background="@drawable/black_circle_border_transparent_background"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:text="@string/helpFragment_attendanceStep2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:src="@drawable/black_circle_border_transparent_background"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:text="3"
            android:background="@drawable/black_circle_border_transparent_background"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:text="@string/helpFragment_attendanceStep3" />

    </LinearLayout>

</LinearLayout>